# float-data

./: README.md
number_files/: bitcoin.txt  canada.txt  marine_ik.txt  mesh.txt  numbers.txt
scripts/: float_to_string.cpp  gaia.py  hellfloat.py  mobilenetv3.py  noaa_gfs_1p00.sh  noaa_global_hourly_f32.py  pyproject.toml
