[project]
name = "fetch_datasets"
version = "0.1.0"
requires-python = "==3.12.*"

dependencies = [
    "camb>=1.6.5",
    "numpy>=2.3.5",
    "requests>=2.32.5",
    "torch==2.2.2+cpu",
    "torchvision==0.17.2+cpu",
]


[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
